<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/margin_16"
    android:layout_marginEnd="@dimen/margin_16"
    android:background="@drawable/custom_bg_dialog">

    <TextView
        android:id="@+id/tv_newFolder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_16"
        android:fontFamily="@font/sf_pro_display_regular"
        android:text="@string/new_folder"
        android:textColor="@color/text_black"
        android:textSize="@dimen/text24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_newFolder_folderName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_16"
        android:layout_marginTop="@dimen/margin_10"
        android:fontFamily="@font/sf_pro_display_regular"
        android:text="@string/folder_name"
        android:textColor="@color/text_gray"
        android:textSize="@dimen/text13sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_newFolder" />

    <EditText
        android:id="@+id/edt_newFolder_name"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="@dimen/margin_16"
        android:layout_marginTop="@dimen/margin_6"
        android:layout_marginEnd="@dimen/margin_16"
        android:background="@drawable/custom_bg_edt"
        android:ellipsize="end"
        android:fontFamily="@font/sf_pro_display_regular"
        android:inputType="text"
        android:maxEms="1"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:textColor="@color/text_blue"
        app:layout_constraintTop_toBottomOf="@id/tv_newFolder_folderName" />

    <android.widget.Button
        android:id="@+id/btn_newFolder"
        android:layout_width="173dp"
        android:layout_height="36dp"
        android:layout_marginTop="@dimen/margin_16"
        android:layout_marginBottom="@dimen/margin_18"
        android:background="@drawable/custom_bg_button_blue"
        android:fontFamily="@font/sf_pro_display_regular"
        android:text="@string/ok"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/text17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_newFolder_name" />


</androidx.constraintlayout.widget.ConstraintLayout>