<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="187dp"
    android:layout_marginStart="@dimen/margin_16"
    android:layout_marginEnd="@dimen/margin_16"
    android:background="@drawable/custom_bg_dialog">

    <TextView
        android:fontFamily="@font/sf_pro_display_regular"
        android:textStyle="bold"
        android:id="@+id/tv_enterPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_16"
        android:text="@string/enter_password"
        android:textColor="@color/text_black"
        android:textSize="@dimen/text24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:fontFamily="@font/sf_pro_display_regular"
        android:id="@+id/tv_enterPass_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_16"
        android:layout_marginTop="@dimen/margin_10"
        android:text="@string/password"
        android:textColor="@color/text_gray"
        android:textSize="@dimen/text13sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_enterPassword" />

    <RelativeLayout
        android:id="@+id/rl_enterPass"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="@dimen/margin_16"
        android:layout_marginTop="@dimen/margin_6"
        android:layout_marginEnd="@dimen/margin_16"
        android:background="@drawable/custom_bg_edt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_enterPass_pass">

        <ImageView
            android:id="@+id/img_enterPass_password"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="@dimen/margin_10"
            android:layout_marginEnd="@dimen/margin_11"
            android:layout_marginBottom="@dimen/margin_10"
            android:src="@drawable/ic_show_pass" />

        <EditText
            android:fontFamily="@font/sf_pro_display_regular"
            android:id="@+id/edt_enterPass_password"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_toStartOf="@+id/img_enterPass_password"
            android:background="@drawable/custom_bg_edt"
            android:inputType="textPassword" />


    </RelativeLayout>

    <android.widget.Button
        android:fontFamily="@font/sf_pro_display_regular"
        android:id="@+id/btn_enterPass_ok"
        android:layout_width="173dp"
        android:layout_height="36dp"
        android:layout_marginTop="@dimen/margin_34"
        android:layout_marginBottom="@dimen/margin_21"
        android:background="@drawable/custom_bg_button_blue"
        android:text="@string/ok"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/text17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rl_enterPass" />


</androidx.constraintlayout.widget.ConstraintLayout>