<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".ui.explorer.apk.ApkFragment">

        <ImageView
            android:id="@+id/img_apk_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_16"
            android:layout_marginTop="@dimen/margin_30"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:padding="@dimen/margin_4"
            android:src="@drawable/ic_arrow_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/tv_apk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_30"
            android:fontFamily="@font/sf_pro_display_regular"
            android:text="@string/apk"
            android:textColor="@color/text_black"
            android:textSize="@dimen/text22sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <ImageView
            android:id="@+id/img_search_apk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_30"
            android:layout_marginEnd="@dimen/margin_16"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/ic_search"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_apk_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_30"
            android:layout_marginEnd="@dimen/margin_16"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:fontFamily="@font/sf_pro_display_regular"
            android:text="@string/cancel"
            android:textColor="@color/text_blue"
            android:textSize="@dimen/text18sp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.SearchView
            android:id="@+id/search_apk"
            android:layout_width="0dp"
            android:layout_height="36dp"
            android:layout_marginStart="@dimen/margin_8"
            android:layout_marginTop="@dimen/margin_28"
            android:layout_marginEnd="@dimen/margin_8"
            android:background="@drawable/custom_bg_search"
            android:visibility="gone"
            app:closeIcon="@null"
            app:iconifiedByDefault="false"
            app:layout_constraintEnd_toStartOf="@+id/tv_apk_cancel"
            app:layout_constraintStart_toEndOf="@+id/img_apk_back"
            app:layout_constraintTop_toTopOf="parent"
            app:queryBackground="@null"
            app:queryHint="@string/search"
            app:searchIcon="@null" />

        <TextView
            android:id="@+id/tv_apk_noData"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sf_pro_display_regular"
            android:text="@string/no_data"
            android:textColor="@color/text_blue"
            android:textSize="@dimen/text22sp"
            android:visibility="invisible"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RelativeLayout
            android:id="@+id/rl_apk_ads"
            android:layout_width="match_parent"
            android:layout_height="105dp"
            android:layout_marginStart="@dimen/margin_16"
            android:layout_marginTop="@dimen/margin_24"
            android:layout_marginEnd="@dimen/margin_16"
            android:background="@drawable/custom_bg_ads"
            app:layout_constraintTop_toBottomOf="@+id/img_apk_back"
            tools:layout_editor_absoluteX="16dp">

        </RelativeLayout>

        <ProgressBar
            android:id="@+id/progress_apk"
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_apk"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/margin_16"
            android:layout_marginTop="@dimen/margin_28"
            android:layout_marginEnd="@dimen/margin_16"
            android:clipToPadding="false"
            android:paddingBottom="120dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rl_apk_ads" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
